# english-speaker

./: .env.example  .gitignore  README.md  db.py  justfile  main.py  pyproject.toml  run_all.py  server.py
backend/: __main__.py  agent.py  config.py  db.py  launcher.py  prompts.py  server.py
frontend/: README.md  package.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: ChatBubble.tsx  ConversationView.tsx  GoalPill.tsx  ProgressPanel.tsx  SessionPanel.tsx  SessionSheet.tsx
frontend/src/hooks/: useProgress.ts  useVoiceChat.ts
vite-app/: index.html  package.json
vite-app/src/: index.css  types.ts
vite-app/src/components/: ConnectionDialog.tsx  GoalPill.tsx  MicButton.tsx  SessionSheet.tsx
