[project]
name = "english-speaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "livekit-agents[cartesia,deepgram,deepseek,elevenlabs,openai,silero,turn-detector]~=1.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
